--- a/src/draad-adreszoeker/editor.scss
+++ b/src/draad-adreszoeker/editor.scss
@@ -4,6 +4,6 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-draad-adreszoeker-draad-adreszoeker {
-	border: 1px dotted #f00;
+.wp-block-draadnl-draad-adreszoeker .components-placeholder__fieldset {
+	display: none;
 }
