Added sr-only class to styles

--- a/src/draad-adreszoeker/style.scss
+++ b/src/draad-adreszoeker/style.scss
@@ -5,6 +5,42 @@
  * Replace them with your own styles or remove the file completely.
  */
 
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
+
+	&.--focusable {
+		&:focus,
+		&:focus-visible {
+			position: fixed;
+			inset: 0.5em auto auto 0.5em;
+			z-index: 100000;
+			width: auto;
+			height: auto;
+			margin: 0;
+			padding: 0.9375em 1.4375em 0.875em;
+			overflow: visible;
+			clip: auto;
+			white-space: normal;
+			outline-offset: -0.0625em;
+			background: hsl(240, 3.4%, 94.3%);
+			box-shadow: 0 0 0.125rem 0.125rem hsla(0, 0%, 0%, 0.6);
+			color: hsl(206.9, 67.8%, 41.4%);
+			font-size: 0.875rem;
+			font-weight: 600;
+			line-height: normal;
+			text-decoration: none;
+		}
+	}
+}
+
 .draad-adreszoeker {
 	container-name: adreszoeker;
 	container-type: inline-size;
